<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_graph"
    app:startDestination="@id/FirstFragment">

    <fragment
        android:id="@+id/FirstFragment"
        android:name="com.example.navigation_proto.FirstFragment"
        android:label="@string/first_fragment_label"
        tools:layout="@layout/fragment_first">

        <action
            android:id="@+id/action_FirstFragment_to_SecondFragment"
            app:destination="@id/SecondFragment"
            app:popUpTo="@id/FirstFragment" />
        <action
            android:id="@+id/action_FirstFragment_to_historyPage"
            app:destination="@id/historyPage"
            app:popUpTo="@id/FirstFragment" />
    </fragment>
    <fragment
        android:id="@+id/SecondFragment"
        android:name="com.example.navigation_proto.SecondFragment"
        android:label="@string/second_fragment_label"
        tools:layout="@layout/fragment_second">

        <action
            android:id="@+id/action_SecondFragment_to_FirstFragment"
            app:destination="@id/FirstFragment"
            app:popUpTo="@id/SecondFragment"
            app:popUpToInclusive="false" />
        <action
            android:id="@+id/action_SecondFragment_to_historyPage"
            app:destination="@id/historyPage"
            app:popUpTo="@id/SecondFragment" />
    </fragment>
    <fragment
        android:id="@+id/historyPage"
        android:name="com.example.navigation_proto.HistoryPage"
        android:label="@string/history_page_label"
        tools:layout="@layout/history_page" >
        <action
            android:id="@+id/action_historyPage_to_SecondFragment"
            app:destination="@id/SecondFragment"
            app:popUpTo="@id/historyPage" />
        <action
            android:id="@+id/action_historyPage_to_FirstFragment"
            app:destination="@id/FirstFragment"
            app:popUpTo="@id/historyPage" />
    </fragment>
</navigation>